--- a/Preparación_para_el_parcial.ipynb
+++ b/Preparación_para_el_parcial.ipynb
@@ -134,6 +134,24 @@
     "    print(\"\")\n",
     "    \n",
     "    print(f\"El numero de participantes inscritos en el curso es de: {n_participantes}\")\n",
+"    print(\"\")\n",
+    "    \n",
+    "    total = 0\n",
+    "    \n",
+    "    for x in lista_procedencia:\n",
+    "        if x == 1:\n",
+    "            total += 500000\n",
+    "            \n",
+    "        elif x == 2:\n",
+    "            total += 1000000\n",
+    "            \n",
+    "        elif x == 3:\n",
+    "            total += 2000000\n",
+    "            \n",
+    "        else:\n",
+    "            pass\n",
+    "    \n",
+    "    print( \"El curso ha recaudado un total de: {:,.0f} pesos\".format(total) ) #Para imprimir el dinero\n",
     "        \n",
     "recaudo()"
    ]
