--- a/Preparación_para_el_parcial.ipynb
+++ b/Preparación_para_el_parcial.ipynb
@@ -19,7 +19,9 @@
       "\n",
       "El promedio de edad de los matriculados es de: 35 años\n",
       "\n",
-      "El numero de participantes inscritos en el curso es de: 3\n"
+      "El numero de participantes inscritos en el curso es de: 3\n",
+      "\n",
+      "El curso ha recaudado un total de: 3,500,000 pesos\n"
      ]
     }
    ],
