--- a/Persistencia de datos uso de archivos/Semana14/Semana14.ipynb
+++ b/Persistencia de datos uso de archivos/Semana14/Semana14.ipynb
@@ -211,7 +211,7 @@
     "# Recorremos las filas y columnas\n",
     "for i in range(len(lista1)): \n",
     "    for j in range(len(lista1[i])): \n",
-    "        # Se obtiene una lista de los nombes \n",
+    "        # Se obtiene una lista de los nombres \n",
     "        elementos = lista1[i][0] \n",
     "    # Añadimos los elementos recogidos en la lista nombres\n",
     "    nombres.append(elementos) \n",
