--- a/Persistencia de datos uso de archivos/Semana14/Semana14.ipynb
+++ b/Persistencia de datos uso de archivos/Semana14/Semana14.ipynb
@@ -147,7 +147,7 @@
     "# Declara lista \n",
     "lista1 = []\n",
     "# Abre archivo en modo de lectura \n",
-    "archivo = open(\"NOTAS2.csv\", \"r\")\n",
+    "archivo = open(\"notas2.csv\", \"r\")\n",
     "# Recorre linea a linea el archivo \n",
     "for linea in archivo: \n",
     "    # Recoge cada uno de los caracteres, omitiendo los caracteres especiales\n",
